[package]

name = "strava"
version = "0.0.2"
authors = ["Joe Wilm <jdwilm@gmail.com>"]
description = "Strava API v3 Client"
repository = "https://github.com/jwilm/strava-rs"
readme = "README.md"
keywords = ["strava", "client", "api"]
license = "MPL-2.0"

[dependencies.hyper]
version = "~0.5"

[dependencies.rustc-serialize]
version = "~0.3"
